Fixed: placeholder text being wrong font

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -244,6 +244,7 @@ h1, h2, h3, h4, h5, h6, p, a, b {
 
 .text-input::placeholder {
     color: var(--dark-text-color);
+    font-family: "Montserrat", serif;
 }
 
 /* Button */
